--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,3 +90,6 @@ reqwest = { workspace = true }
 futures = { workspace = true }
 
 rand = "0.8"
+
+[dev-dependencies]
+async-trait = { workspace = true }
