--- a/crates/miow-graph/Cargo.toml
+++ b/crates/miow-graph/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = { workspace = true }
 rusqlite = { workspace = true }
 sqlx = { workspace = true }
 tracing = { workspace = true }
+async-trait = { workspace = true }
