--- a/crates/miow-vector/Cargo.toml
+++ b/crates/miow-vector/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
 uuid = { version = "1.7", features = ["v5"] }
+notify = "6.1"
